tests/sksl/errors/Ossfuzz38106.glsl
### Compilation failed:

error: 1: expected identifier, but found ';'
half R = 0 .;
            ^
error: 1: expected field name or swizzle mask after '.'
half R = 0 .;
         ^^^^
error: 8: expected ';', but found ''
3 errors
